# cyborgzoscii

./: CyborgZOSCII-whitepaper.txt  README.md
books/: readme.txt
challenge/: zoscii10billionwallet.csv
docs/: CyborgZOSCII-documentation.md  DOCUMENTATION.md  Securing-Your-PC.html  ZOSCII-Modes.html  ZOSCII-Modes.md  ZOSCII-Rolling-Hash.md  ZOSCII-Tango.md  ZOSCII-User-Guidelines.html  ZOSCII-Whitepaper.html  ZOSCII-Whitepaper.md  ZTB-ImplementationGuide.html  ZTB-ImplementationGuide.md  ZTB-README.1ST  ZTB-UserGuide.html  ZTB-UserGuide.md  ZTB-Whitepaper-Addendum.html  ZTB-Whitepaper.html  ZTB-Whitepaper.md  ZTB-Whitepaper.txt  byetong-vs-zoscii.md  mathematical-proof.txt  securing-pc.md  zoscii-usage-modes.html  zoscii-usage-modes.md
encoder/: cyborgzoscii.es6  cyborgzoscii.js  cyborgzoscii.min.js  encoder.js  encoder.min.js  index.html  verifier.html  zosciicoinkeyencoder.js
news/: news-announcement-001!.txt  news-announcement-002!.txt  news-announcement-003!.txt  news-announcement-004!.txt  news-announcement-005!.txt  news-announcement-006!.txt  news-announcement-007!.txt  news-announcement-008!.txt  news-announcement-009!.txt  news-announcement-010!.txt  news001.wiki  news002.wiki  news003.wiki  news004.wiki  news005.wiki  news006.wiki  news007.wiki  news008.wiki  news009.wiki  news010.wiki  news011.wiki  uknews-001.txt  uknews-002.txt  uknews-003.txt  uknews-004.txt  uknews-005.txt  uknews-006.txt  uknews-007.txt  uknews-008.txt  uknews-009.txt  uknews-010.txt  uknews-011.txt  uknews-012.txt  (+3 more)
src/encoder-function/rust/: Cargo.toml  zoscii-encoder.rs
(+440 files in other folders)
